Network Policies Scenario/Beginner/Scenario - 5/Solutions/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-from-one-ns-to-another
  namespace: default
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchlabels:
          kubernetes.io/metadata.name: monitoring
    # Assuming port is 9100
    ports:
    - port: 9100
      protocol: TCP
